package mcunit;

public interface Test {

    void run(TestReport collector);

}
